--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 533d2a51f68a57ad0f454d746109444f.svg
 cherished.png
 first_model.txt
@@ -8,11 +6,4 @@ frontend/node_modules/
 reading_comprehension/
 visual_question_answering/
 backend/__pycache__/
-=======
-
-533d2a51f68a57ad0f454d746109444f.svg
-cherished.png
-first_model.txt
-backend/database.db
-frontend/node_modules/
->>>>>>> 68464d34031e25b641c5b2a3b97dbf6f387fb0ac
+backend/model_zoo/
