model zoo added

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ frontend/node_modules/
 reading_comprehension/
 visual_question_answering/
 backend/__pycache__/
-backend/model_zoo/
+backend/model_zoo/*
